@startuml book
!theme blueprint

title Book Aggregate

class Book <<Aggregate Root>> {
    -id: BookId
    -author_id: AuthorId
    -title: BookTitle
    -isbn: ISBN
    -summary: Summary
    -published_year: PublishedYear
    -page_count: PageCount
    -genres: list[Genre]
    -reviews: list[Review]

    +{static} create(book_id: BookId, author_id: AuthorId, title: BookTitle, isbn: ISBN, summary: Summary, published_year: PublishedYear, page_count: PageCount): Book

    +id(): BookId
    +author_id(): AuthorId
    +title(): BookTitle
    +isbn(): ISBN
    +summary(): Summary
    +published_year(): PublishedYear
    +page_count(): PageCount
    +genres(): list[Genre]
    +reviews(): list[Review]
    +review_count(): int
    +average_rating(): float | None

    +change_title(new_title: BookTitle): void
    +change_isbn(new_isbn: ISBN): void
    +change_summary(new_summary: Summary): void
    +add_genre(genre: Genre): void
    +remove_genre(genre: Genre): void
    +add_review(review: Review): void
    +remove_review(review_id: ReviewId): void
}

class Review <<Entity>> {
    -id: ReviewId
    -rating: Rating
    -comment: ReviewComment
    -created_at: datetime

    +Review(id: ReviewId, rating: Rating, comment: ReviewComment, created_at: datetime)

    +id(): ReviewId
    +rating(): Rating
    +comment(): ReviewComment
    +created_at(): datetime
}

Book *-- "0..*" Review : owns >
Book --> AuthorId : references >
Book *-- "1..*" Genre

@enduml
